cmake_minimum_required(VERSION 3.26)
project(aoc23 Fortran)

enable_language(Fortran)
add_executable(day1 day1.f90)

add_executable(day2 day2.f90)

add_executable(day3 day3.f90)

add_executable(day4 day4.f90)

add_executable(day5 day5.f90)

add_executable(day6 day6.f90)

add_executable(day7 day7.f90)
add_compile_options(-ggdb)