cmake_minimum_required(VERSION 3.26)
project(aoc23 Fortran)

enable_language(Fortran)
add_executable(day1 "Day 1 - 7/day1.f90")

add_executable(day2 "Day 1 - 7/day2.f90")

add_executable(day3 "Day 1 - 7/day3.f90")

add_executable(day4 "Day 1 - 7/day4.f90")

add_executable(day5 "Day 1 - 7/day5.f90")

add_executable(day6 "Day 1 - 7/day6.f90")

add_executable(day7 "Day 1 - 7/day7.f90")

add_executable(day8 "Day 8 - 14/day8.f90")

add_executable(day9 "Day 8 - 14/day9.f90")