cmake_minimum_required(VERSION 3.10.2)
project(aoc23 Fortran)

enable_language(Fortran)
add_executable(day1 "Day 1 - 7/day1.f90")

add_executable(day2 "Day 1 - 7/day2.f90")

add_executable(day3 "Day 1 - 7/day3.f90")

add_executable(day4 "Day 1 - 7/day4.f90")

add_executable(day5 "Day 1 - 7/day5.f90")

add_executable(day6 "Day 1 - 7/day6.f90")

add_executable(day7 "Day 1 - 7/day7.f90")

add_executable(day8 "Day 8 - 14/day8.f90")

add_executable(day9 "Day 8 - 14/day9.f90")

add_executable(day10 "Day 8 - 14/day10.f90")

add_executable(day11 "Day 8 - 14/day11.f90")

add_executable(day12 "Day 8 - 14/day12.f90")

add_executable(day13 "Day 8 - 14/day13.f90")
add_compile_options(-g)

add_executable(day14 "Day 8 - 14/day14.f90")